# speckit-orchestra

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.plan/: refine-architecture.md
src/speckit_orchestra/: __init__.py  adapters.py  cli.py  config.py  epics.py  feature.py  git.py  locks.py  migration.py  opencode_discovery.py  orchestrator.py  project.py  prompts.py  refinement.py  reporting.py  state.py  ui.py  utils.py  validation.py
tests/: test_cli.py  test_migration.py  test_opencode_config.py  test_orchestrator.py  test_project.py  test_prompts.py  test_refinement.py  test_reporting.py  test_validation.py
